syntax = "proto3";
package douyin;
option go_package = "douyin";
import "api.proto";
import "google/protobuf/wrappers.proto";

message UserRequest {
  string user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message UserResponse {
  uint32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  User user = 3; // 用户信息
}

message User {
  uint32 id = 1; // 用户id
  string name = 2; // 用户名称
  uint32 follow_count = 3; // 关注总数
  uint32 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
}